# GUI_Spreadsheet

./: .gitignore  CMakeLists-new.txt  CMakeLists-old_unused_dontdelete_maybeuseful.txt  CMakeLists.txt  LICENSE.md  Main.qml  README.md  main.cpp
Resources/CustomMenuBar/: FileMenu.qml
Resources/Sheet/: Sheet.cpp  Sheet.h
Resources/Sheet/Cell/: Cell.cpp  Cell.h  Formula.cpp  Formula.h  FormulaCell.cpp  FormulaCell.h  NumericCell.cpp  NumericCell.h  TextCell.cpp  TextCell.h
Resources/Sheet/Coordinates/: Address.h  Coordinates.h
Resources/Sheet/Misc/: Misc.cpp  Misc.h
Resources/Table/: ColumnHeaders.qml  RowHeaders.qml  SheetTable.qml  headers.cpp  headers.h  table.cpp  table.h
Resources/UI/: fileio.cpp  fileio.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  FileMenu.qml  Main.qml  main.cpp
src/app/customMenuBar/: CMakeLists.txt  FileMenu.qml
src/cell/: Cell.cpp  Formula.cpp  FormulaCell.h  TextCell.h
src/coordinates/: Area.h
src/io/: CMakeLists.txt  fileio.h
src/sheet/: CMakeLists.txt  Sheet.cpp  Sheet.h
src/sheet/cell/: CMakeLists.txt  Cell.cpp  Formula.cpp  Formula.h
src/sheet/coordinates/: CMakeLists.txt  Coordinates.cpp  Position.h
src/sheet/table/: CMakeLists.txt  ColumnHeaders.qml  RowHeaders.qml  Table.h
src/table/: headers.h  table.h
src/utilities/: CMakeLists.txt  StringUtility.cpp
